# rayslash

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/rayslash-core/: Cargo.toml
crates/rayslash-core/src/: actions.rs  aliases.rs  app_state.rs  apps.rs  atomic_write.rs  calc.rs  config.rs  currency.rs  lib.rs  projects.rs  ranking.rs  search.rs  time_lookup.rs  units.rs  utility_actions.rs  web_search.rs
crates/rayslash-core/src/apps/: app_discovery.rs  desktop_entry.rs  icon_lookup.rs
crates/rayslash-core/src/apps/icon_lookup/: paths.rs  themes.rs
crates/rayslash-core/src/calc/: equation.rs  error.rs  parser.rs
crates/rayslash-core/src/modules/: descriptors.rs  mod.rs  package.rs  registry.rs  runtime.rs  state.rs
crates/rayslash-core/src/providers/: builtins.rs  mod.rs  types.rs
crates/rayslash-core/src/search/: matcher.rs  providers.rs  result.rs
crates/rayslash-core/tests/: actions.rs  app_state.rs  calculator.rs  config.rs  desktop_apps.rs  desktop_entry.rs  icon_lookup.rs  mixed_search.rs  module_registry.rs  module_runtime.rs  modules.rs  performance.rs  projects.rs  providers.rs  ranking.rs  search_results.rs
crates/rayslash-core/tests/fixtures/: mod.rs
crates/rayslash-core/tests/fixtures/module-registry/: index.json  revocations.json  root.json  root.json.sig
crates/rayslash-ui/: Cargo.toml  build.rs
crates/rayslash-ui/src/: activation.rs  cli.rs  ipc.rs  main.rs  module_settings.rs  opener_visual.rs  result_items.rs  runtime_state.rs  settings.rs  settings_callbacks.rs  window_state.rs
crates/rayslash-ui/ui/: components.slint  models.slint  modules_panel.slint  rayslash.slint  result_list.slint  settings_panel.slint
docs/: AI_STATE.md  APPIMAGE.md  ARCHITECTURE.md  CLEANUP_AUDIT.md  COMPARISON.md  CONFIG.md  DECISIONS.md  INSTALL.md  MODULES.md  PACKAGING.md  PERFORMANCE.md  PRODUCT.md  REFACTORING.md  ROADMAP.md  SHORTCUTS.md  TASKS.md  TESTING.md  UI_VERIFICATION.md  manual_migration.md
docs/releases/: v0.2.0.md
packaging/: install-user.sh  validate-metadata.sh
packaging/appimage/: AppRun  build-appimage.sh
packaging/arch/: PKGBUILD
packaging/debian/: build-deb.sh
packaging/fedora/: fetch-host-rpm.sh  host-release-assets.sha256  prepare-sources.sh  rayslash.spec
packaging/flatpak/: dev.rayan6ms.rayslash.yml
packaging/linux/: dev.rayan6ms.rayslash.desktop  dev.rayan6ms.rayslash.metainfo.xml  inventory.toml
packaging/release/: install-host.sh  validate-assets.sh
