[workspace]
members = [
    "crates/rayslash-core",
    "crates/rayslash-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rayan/rayslash"

[workspace.dependencies]
arboard = "3.6.1"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.17.0", features = ["unstable-winit-030"] }
slint-build = "1.17.0"
toml = "1.1.2"
