[workspace]
members = [
    "crates/rayslash-core",
    "crates/rayslash-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rayan/rayslash"

[workspace.dependencies]
arboard = "3.6.1"
chrono = "0.4.45"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
rfd = { version = "0.17.2", default-features = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.17.0", features = ["unstable-winit-030"] }
slint-build = "1.17.0"
toml = "1.1.2"
ureq = { version = "2.12.1", features = ["json"] }
