[workspace]
members = [
    "crates/rayslash-core",
    "crates/rayslash-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rayan/rayslash"

[workspace.dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
image = { version = "0.25.10", default-features = false, features = ["ico", "png"] }
nucleo-matcher = "0.3.1"
rfd = { version = "0.17.2", default-features = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
semver = { version = "1.0.27", features = ["serde"] }
sha2 = "0.10.9"
slint = { version = "1.17.0", features = ["unstable-winit-030"] }
slint-build = "1.17.0"
toml = "1.1.2"
tar = "0.4.44"
ureq = { version = "3.3.0", features = ["json"] }
zstd = "0.13.3"
