[package]
name = "rayslash-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
registry-dev-override = []

[dependencies]
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
image.workspace = true
nucleo-matcher.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
ureq.workspace = true
zstd.workspace = true
