[package]
name = "rayslash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rayslash"
path = "src/main.rs"

[dependencies]
rayslash-core = { path = "../rayslash-core" }
slint.workspace = true

[build-dependencies]
slint-build.workspace = true
