[package]
name = "rayslash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rayslash"
path = "src/main.rs"

[dependencies]
arboard.workspace = true
dirs.workspace = true
image.workspace = true
rayslash-core = { path = "../rayslash-core" }
rfd.workspace = true
semver.workspace = true
slint.workspace = true

[build-dependencies]
slint-build.workspace = true
