[package]
name = "rayslash"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rayslash"
path = "src/main.rs"

[dependencies]
arboard.workspace = true
dirs.workspace = true
image.workspace = true
rayslash-core = { path = "../rayslash-core" }
rfd.workspace = true
semver.workspace = true
serde_json.workspace = true
slint.workspace = true
toml.workspace = true

[build-dependencies]
slint-build.workspace = true
